add BlockConversionHelper::copyBlockProperties